# tree-sitter-ecs-component-registry

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example.ecr  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-ecs-component-registry.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ecs_component_registry/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterEcsComponentRegistry/: ecs_component_registry.h
bindings/swift/TreeSitterEcsComponentRegistryTests/: TreeSitterEcsComponentRegistryTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
